<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/voilet"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.shomd.ashu.yumlane.login"
    tools:ignore="ExtraText"><![CDATA[

    "
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    ]]>

    <TextView
        android:text="@string/password"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="25sp"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView"
         />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="81dp"
        android:id="@+id/login"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/pass"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@color/white"
        android:id="@+id/edpass"
        android:layout_above="@+id/login"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/username"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@color/white"
        android:ems="10"
        android:id="@+id/edname"
        tools:ignore="RelativeOverlap"
        android:layout_alignTop="@+id/textView"
        android:layout_alignLeft="@+id/edpass"
        android:layout_alignStart="@+id/edpass" />

    <TextView
        android:text="@string/uname"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="72dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
