<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAccent"
    tools:context="com.shomd.ashu.yumlane.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_yumlane"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:text=""
        android:ems="10"
        android:id="@+id/etName"
        android:layout_above="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_marginTop="47dp"

        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="phone"
        android:ems="10"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:id="@+id/etPhone"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/phone_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="26dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btSubmit"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="12dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/product_purchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"

        android:layout_marginTop="28dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/etPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText

        android:layout_height="70dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etProduct"
        android:textStyle="bold"

        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_width="35dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
