<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shomd.ashu.yumlane.User_Activity">

    <TextView
        android:text="@string/welcome_to_yumlane1"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:id="@+id/textView6" />

    <TextView
        android:text="@string/emptyString"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:id="@+id/tvproduct"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginBottom="161dp" />

    <TextView
        android:text="@string/thanks_for_your_purchase"
        android:textColor="@color/colorAccent"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/textView8"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/emptyString"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvname"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Close"
        android:layout_width="wrap_content"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:id="@+id/BtExit" />
</RelativeLayout>
